[gd_scene load_steps=5 format=3 uid="uid://b06fmyjiuyct3"]

[ext_resource type="Script" path="res://scripts/ui/pause_dialog.gd" id="1_gb2we"]
[ext_resource type="PackedScene" uid="uid://c3fum4gxs5rkr" path="res://scenes/ui/regular_button.tscn" id="1_h8h58"]
[ext_resource type="StyleBox" uid="uid://c88k4xydwlc5w" path="res://resources/ui/dialog_background.tres" id="1_vroma"]
[ext_resource type="FontFile" uid="uid://da3upsvs18iu7" path="res://assets/fonts/pixelFont-4-7x7-sproutLands.ttf" id="2_q5w6r"]

[node name="PauseDialog" type="PanelContainer"]
custom_minimum_size = Vector2(160, 160)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_vroma")
script = ExtResource("1_gb2we")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_q5w6r")
theme_override_font_sizes/font_size = 28
text = "PAUSE"
horizontal_alignment = 1

[node name="ContinueButton" parent="VBoxContainer" instance=ExtResource("1_h8h58")]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" parent="VBoxContainer" instance=ExtResource("1_h8h58")]
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" parent="VBoxContainer" instance=ExtResource("1_h8h58")]
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" parent="VBoxContainer" instance=ExtResource("1_h8h58")]
layout_mode = 2
text = "QUIT"

[node name="Hint" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_q5w6r")
theme_override_font_sizes/font_size = 6
text = "the game saves automatically"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
